spec/error_mut.kex
main do
  var x = 34
  IO.printLine("x = ${x}")
  x = 33
  IO.printLine("x = ${x}")

  let x = []
  IO.printLine("x = ${x}")
end
